# epistemic_prop_network

./: .gitignore  =4.0.0  AGENTS.md  LLM.md  OOP_ARCHITECTURE.md  README.md  REAL_LLM_TESTING_README.md  api.py  architecture.md  build_plan.md  build_plan_and_flow.md  cli.py  config_builder.py  epn_cli.py  gpt-oss-120b-guide.md  implementation_plan.md  inspect_pipeline.py  layer.json  layered_architecture_plan.md  llm.json  main.py  minimal_runner.py  network_flow.md  original_templates.md  plan.md  project_concept.md  pyproject.toml  requirements.txt  template.json  templates.json  test_config_builder.py  test_qwen_reasoning.py  test_reformulator_real_llm.py
core/: config.py  exceptions.py  llm_client.py  logging_config.py  schemas.py  template_manager.py
docs/: ISSUE_TEMPLATE.md  LLM.md  OOP_ARCHITECTURE.md  OOP_NODE_PROOF_OF_CONCEPT.md  README.md  SCRIPTS_INSTRUCTIONS.md  TEST_INSTRUCTIONS.md  builder_wizard.md  canonical_contract.md  gpt-oss-120b-guide.md  xai_integration.md
epn_core/: __init__.py
layers/: templates2.json  templates3.json
schemas/: layer_schema.json  template_schema.json
scripts/: __init__.py  builder_wizard.py  chat_repl.py  check_docs_md.py  dry_run_llm_render.py  epn_inspect_run.py  epn_xai_node_example.py  fix_docs_md.py  fix_docs_md_aggressive.py  minimal_runner.py  run_xai_batch.py  run_xai_batch.sh  validate_templates.py  xai_chat_repl.py  xai_smoke_test.py  zai_smoke_test.py
tests/: conftest.py  test_builder_wizard.py  test_cli_defaults.py  test_config_builder_placeholders.py  test_config_builder_pytest.py  test_core.py  (+10 more)
(+39 files in other folders)
