[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemological-network"
version = "0.1.0"
description = "Epistemological Propagation Network using Groq GPT-OSS-120B"
authors = [{name = "Epistemological Network Team"}]
dependencies = [
    "groq>=0.9.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "httpx>=0.25.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
epn = "epn_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["epn_core*"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88